--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -39,8 +39,8 @@
       </div>
       <br>
       <div id="hAndW" style="display:inline-flex;">
-        <h3 id="heightOfPokemon">Height: {{pokemonHeight}}</h3> &nbsp;&nbsp;&nbsp;&nbsp;
-        <h3 id="weightOfPokemon">Weight: {{pokemonWeight}}</h3>
+        <h3 id="heightOfPokemon">Height: {{pokemonHeight}} m</h3> &nbsp;&nbsp;&nbsp;&nbsp;
+        <h3 id="weightOfPokemon">Weight: {{pokemonWeight}} kg</h3>
       </div>
       <br>
       <div id="colorAndType" style="display:inline-flex;">
