--- a/src/app/pokemon-list/pokemon-list.component.html
+++ b/src/app/pokemon-list/pokemon-list.component.html
@@ -60,8 +60,8 @@
             </ng-template>
           </div>
           <div id="info" style="display:inline-block;">
-            <h3 id="heightOfPokemon">Height: {{pokemon.value.height}}</h3>
-            <h3 id="weightOfPokemon">Weight: {{pokemon.value.weight}}</h3>
+            <h3 id="heightOfPokemon">Height: {{pokemon.value.height}} m</h3>
+            <h3 id="weightOfPokemon">Weight: {{pokemon.value.weight}} kg</h3>
             <h3 id="colorOfPokemon">Color: {{pokemon.value.color | titlecase}}</h3>
             <h3 id="typeOfPokemon">Type: {{pokemon.value.type}}</h3>
           </div>
