added many attributes

--- a/src/app/evolutions/evolutions.component.html
+++ b/src/app/evolutions/evolutions.component.html
@@ -12,35 +12,20 @@
             *ngFor="let pokemon of list | sort:'{{pokemon.id}}'; let isNotLast = last;">
          <nav>
            <a routerLink="/pokedex/?pokemonID={{pokemon.id}}" style="text-decoration: none; color: black;">
-               <div [ngStyle]="{'background-color':changeColor(pokemon.color)}" class="box">
-                 <h3 id="idOfPokemon">ID: {{pokemon.id}}</h3>
-                 <h3 id="nameOfPokemon">Name: {{pokemon.name | titlecase}}</h3>
-                 <img style="width:100px; height:100px;"
-                      src="{{pokemon.photo}}" alt="{{pokemon.photo}}-default">
+               <div [ngStyle]="{'background-color':changeColor(pokemon.color)}" class="box" style="display:inline-block;">
+                 <div id="idAndName" style="display:inline-flex;">
+                   <h3 id="name">{{pokemon.name | titlecase}}</h3>
+                   <p>&nbsp;&nbsp;&nbsp;&nbsp;</p>
+                   <h3 id="idOfPokemon">ID: {{pokemon.id}}</h3>
+                 </div>
+                 <div id="image">
+                   <img style="width:100px; height:100px;"
+                        src="{{pokemon.photo}}" alt="{{pokemon.photo}}-default">
+                 </div>
                  <h3 id="heightOfPokemon">Height: {{pokemon.height}} m</h3>
                  <h3 id="weightOfPokemon">Weight: {{pokemon.weight}} kg</h3>
                  <h3 id="colorOfPokemon">Color: {{pokemon.color | titlecase}}</h3>
                  <h3 id="typeOfPokemon">Type: {{pokemon.type}}</h3>
-<!--                 <div *ngIf="pokemon.evolves">-->
-<!--                   <div *ngIf="pokemon.evolutionLevel != null">-->
-<!--                     <h3 id="levelOfPokemon1">Evolves At Lvl: {{pokemon.evolutionLevel}}</h3>-->
-<!--                   </div> &lt;!&ndash; with level &ndash;&gt;-->
-<!--                   <div *ngIf="pokemon.doesEvolvesWithItem;">-->
-<!--                     <div *ngFor="let item of pokemon.evolvesByUsingItem">-->
-<!--                       &lt;!&ndash;<h3 id="itemToEvolve">Evolves with: {{pokemon.evolvesByUsingItem}}</h3>&ndash;&gt;-->
-<!--                       <h3 id="itemToEvolve">Evolves with: {{item | titlecase}}</h3>-->
-<!--                     </div>-->
-<!--                   </div> &lt;!&ndash; with use_item &ndash;&gt;-->
-<!--                   <div *ngIf="pokemon.doesEvolveWithHeldItem">-->
-<!--                     <h3 id="heldItemToEvolve">Evolves with: {{pokemon.held_item | titlecase}}</h3>-->
-<!--                   </div> &lt;!&ndash; with held_item &ndash;&gt;-->
-<!--                   <div *ngIf="pokemon.evolvesByHappinessAttribute">-->
-<!--                     <h3 id="attrToEvolve">Evolves w/ Happiness: {{pokemon.happinessAttribute}}</h3>-->
-<!--                   </div> &lt;!&ndash; with happiness &ndash;&gt;-->
-<!--                 </div>-->
-<!--                 <div *ngIf="!pokemon.evolves">-->
-<!--                   <h3 id="levelOfPokemon">Final Form</h3>-->
-<!--                 </div>-->
                </div>
              </a>
          </nav>
