--- a/src/app/evolves-how/evolves-how.component.html
+++ b/src/app/evolves-how/evolves-how.component.html
@@ -65,12 +65,29 @@
     <h3 id="knownMovesTypesTitle"
         class="listStyle"><b>Evolves with move type: </b></h3>
     <div *ngFor="let moveType of knownMoveTypes; let i=index;">
-      <h3 id="location{{i+1}}"
+      <h3 id="knownMoveType{{i+1}}"
           class="listStyle"
       >{{moveType | titlecase}}</h3>
     </div>
     <br>
   </div> <!-- with known moves types -->
+  <div *ngIf="hasNeedsRain">
+    <h3 id="needsRainTitle"
+        class="listStyle"><b>Evolves with rain: </b></h3>
+    <h3 id="rain"
+          class="listStyle"
+    >{{needsRain | titlecase}}</h3>
+    <br>
+  </div> <!-- with needs rain -->
+  <!-- other attributes -->
+  <div *ngIf="hasTurnUpsideDown">
+    <h3 id="turnUpsideDownTitle"
+        class="listStyle"><b>Evolves by turning Upside Down: </b></h3>
+    <h3 id="upsideDown"
+        class="listStyle"
+    >{{turnUpsideDown | titlecase}}</h3>
+    <br>
+  </div> <!-- with turn upside down -->
 </ng-template>
 <ng-template #doesNotEvolve>
   <h3 id="levelOfPokemon">Final Form</h3>
