--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div id="imageOfPokemon" style="justify-content:center;display:block;">
-        <img id="image" alt="pokemon" src="{{pokemonImage}}" width="250" height="250"/>
+        <img id="imageB" alt="pokemon" src="{{pokemonImage}}" width="250" height="250"/>
       </div>
       <div id="photoButtonsDiv" style="justify-content:center;text-align:center;display:inline-flex;">
         <div style="">
@@ -56,7 +56,7 @@
       <br>
       <div
         *ngIf="descriptionDiv"
-        id="descriptionDiv" style="display:inline-flex; width: 300px;">
+        id="descriptionDiv" style="display:inline-flex; width:300px; justify-content:center;">
         <h3 id="description">{{pokemonDescription}}</h3>
       </div>
       <div
