official img on pokedex. minor updates

--- a/src/app/pokedex/pokedex.component.html
+++ b/src/app/pokedex/pokedex.component.html
@@ -24,6 +24,9 @@
           <button id="defaultImgBtn" class="tab" (click)="showImage('default')">Show Default</button>
         </div>
         <div style="">
+          <button id="officialImgBtn" class="tab" (click)="showImage('official')">Show Official</button>
+        </div>
+        <div style="">
           <button id="shinyImgBtn" class="tab" (click)="showImage('shiny')">Show Shiny</button>
         </div>
         <div style="">
