--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -23,7 +23,7 @@
 </div>
 <div *ngIf="pokemonName.length != 0">
   <app-pokedex
-    [sprites]="sprites"
+    [pokemonSprites]="sprites"
     [pokemonID]="pokemonID"
     [pokemonName]="pokemonName"
     [pokemonImage]="pokemonImage"
